--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,10 @@ title: Entropy
 paginate: 5
 theme: PaperMod
 
+module:
+  imports:
+  - path: github.com/adityatelange/hugo-PaperMod
+
 enableRobotsTXT: true
 buildDrafts: false
 buildFuture: false
